PGMBv3 241024L anchor태그고민중

--- a/pyhtml/GG13.html
+++ b/pyhtml/GG13.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <br><h4>심리학</h4>
+  <br><h4 id="CGBC">심리학</h4>
 <p><a href="../book/book_0118.html">118. 무조건 당신편</a></p>
 <p><a href="../book/book_0113.html">113. 마음 실험실</a></p>
 <p><a href="../book/book_0108.html">108. 서른살이 심리학에게 묻다</a></p>
