--- a/pyhtml/GG14.html
+++ b/pyhtml/GG14.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <br><h4>시</h4>
+  <br><h4 id="CGBB">시</h4>
 <p><a href="../book/book_0126.html">126. 중학생 필독 시 (작성중)</a></p>
 <p><a href="../book/book_0122.html">122. 꼭 읽어야 할 시 369 (윤동주)</a></p>
 <p><a href="../book/book_0054.html">054. 백석 _ 외롭고 높고 쓸쓸한</a></p>
