--- a/pyhtml/GG18.html
+++ b/pyhtml/GG18.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <br><h4>2023년 5월이후 독서</h4>
+  <br><h4 id="CGB3">2023년 5월이후 독서</h4>
 <p><a href="../book/book_0128.html">128. 10대를 위한 공정하다는 착각</a></p>
 <p><a href="../book/book_0127.html">127. 화가가 사랑한 나무들</a></p>
 <p><a href="../book/book_0112.html">112. 피니시 (v4)###</a></p>
