--- a/pyhtml/GG19.html
+++ b/pyhtml/GG19.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <br><h4>2024년 독서</h4>
+  <br><h4 id="CGB4">2024년 독서</h4>
 <p><a href="../book/book_0138.html">138. 한권으로 읽는 나의 문화유산답사기</a></p>
 <p><a href="../book/book_0137.html">137. 아직도 악어와 악어새 이야기를 믿어</a></p>
 <p><a href="../book/book_0136.html">136. 주식투자 ETF로 시작하라 (작성중)</a></p>
@@ -18,7 +18,7 @@
 <p><a href="../book/book_0131.html">131. 격차사회</a></p>
 <p><a href="../book/book_0130.html">130. 미술관에 간 심리학</a></p>
 <p><a href="../book/book_0129.html">129. AI시대의 고등교육</a></p>
-<br><h4>2023년 5월이후 독서</h4>
+<br><h4 id="CGB3">2023년 5월이후 독서</h4>
 <p><a href="../book/book_0128.html">128. 10대를 위한 공정하다는 착각</a></p>
 <p><a href="../book/book_0127.html">127. 화가가 사랑한 나무들</a></p>
 <p><a href="../book/book_0112.html">112. 피니시 (v4)###</a></p>
@@ -32,7 +32,7 @@
 <p><a href="../book/book_0119.html">119. 너도 작가가 되고 싶니?</a></p>
 <p><a href="../book/book_0118.html">118. 무조건 당신편</a></p>
 <p><a href="../book/book_0117.html">117. 너는 사람들을 도와주며 살고 싶니?</a></p>
-<br><h4>기존독서 (2023년 5월이전)</h4>
+<br><h4 id="CGB2">기존독서 (2023년 5월이전)</h4>
 <p><a href="../book/book_0116.html">116. 그러니까 아무말도 하지마세요 (...)</a></p>
 <p><a href="../book/book_0115.html">115. 아인슈타인이 들려주는 상대성원리 이야기</a></p>
 <p><a href="../book/book_0114.html">114. 나는 누구 인가</a></p>
