--- a/pyhtml/GG24.html
+++ b/pyhtml/GG24.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 
-  <br><h4>R restart 2019</h4>
+  <br><h4 id="CGBig1">R restart 2019</h4>
 <p><a href="../study/study_0061.html">R 리스타트</a></p>
 <p><a href="../study/study_0062.html">R 마크다운출력</a></p>
 <p><a href="../study/study_0063.html">일정관리1</a></p>
 <p><a href="../study/study_0064.html">일정관리2</a></p>
 <p><a href="../study/study_0065.html">igraph in R</a></p>
 <p><a href="../study/study_0066.html">R Markdown my graph</a></p>
-<br><h4>빅데이터 분석도구 R프로그래밍</h4>
+<br><h4 id="CGBig2">빅데이터 분석도구 R프로그래밍</h4>
 <p><a href="../big/big_0011.html">1장 시작하기</a></p>
 <p><a href="../big/big_0012.html">2장 벡터</a></p>
 <p><a href="../big/big_0013.html">3장 행렬과 배열</a></p>
@@ -23,12 +23,12 @@
 <p><a href="../big/big_0016.html">6장 팩터와 테이블</a></p>
 <p><a href="../big/big_0017.html">7장 R프로그래밍구조</a></p>
 <p><a href="../big/big_0018.html">8장 R에서 수학과 시뮬레이션하기</a></p>
-<br><h4>DoR</h4>
+<br><h4 id="CGBig3">DoR</h4>
 <p><a href="../big/big_0021.html">DoR 01.안녕R</a></p>
 <p><a href="../big/big_0022.html">DoR 04.데이터프레임</a></p>
 <p><a href="../big/big_0023.html">DoR 06.자유자재로 데이터 가공하기</a></p>
 <p><a href="../big/big_0024.html">DoR 07.데이터정제</a></p>
-<br><h4>빅데이터 2</h4>
+<br><h4 id="CGBig4">빅데이터 2</h4>
 <p><a href="../big/big_0031.html">2장 T검정 및 비모수검정</a></p>
 <p><a href="../big/big_0032.html">3장 게으른 학습 최근접 이웃을 사용한 분류</a></p>
 <p><a href="../big/big_0033.html">4장 확률론적 학습 나이브 베이즈를 사용한 분류</a></p>
