--- a/office/office_0001.html
+++ b/office/office_0001.html
@@ -81,6 +81,12 @@
 <li><a href="./office_0008.html">엑셀 수식</a></li>
 </ul>
 <br>
+<h2 id="018-인쇄영역-지정"><strong>018. 인쇄영역 지정</strong></h2>
+<ul>
+<li>화면 하단 클릭하면 좋아요.</li>
+</ul>
+<p><img src="./img/f%EC%9D%B8%EC%87%84%EC%98%81%EC%97%AD.JPG" alt="인쇄영역지정"></p>
+<br>
 <h2 id="017-엑셀-피벗-날짜-컬럼-년분기월-등등등"><strong>017. 엑셀 피벗 날짜 컬럼 (년,분기,월 등등등)</strong></h2>
 <ul>
 <li>날짜 형식의 컬럼의 경우 &quot;분석 - 그룹필드&quot;에서 필요한 컬럼을 편집하면 됨</li>
