--- a/conhtml/CC202410271.html
+++ b/conhtml/CC202410271.html
@@ -139,6 +139,8 @@
         </head>
         <body class="vscode-body vscode-light">
             <h2 id="경제-2025년-투자전망-특강-홍춘옥">경제) 2025년 투자전망 특강 (홍춘옥)</h2>
+<p>!<a href="https://www.youtube.com/watch?v=UXurf2O0gUI">https://www.youtube.com/watch?v=UXurf2O0gUI</a></p>
+<p><a href="https://www.youtube.com/watch?v=BaAOFq0lb-0">https://www.youtube.com/watch?v=BaAOFq0lb-0</a></p>
 <h4 id="금-투자">금 투자</h4>
 <ul>
 <li>리스크 헷지 차원에서 금 투자 필요</li>
