--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 <p><a href="./pyhtml/GG12.html">차이나는 클라스</a></p>
 <p><a href="./pyhtml/GG28.html">기타등등</a></p>
 <p><a href="./pyhtml/GG29.html">영화</a></p>
+<p><a href="./pyhtml/GG32.html">건강</a></p>
+<p><a href="./pyhtml/GG33.html">경제</a></p>
 
 </body>
 </html>
