--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <p><a href="./pyhtml/GG25.html">4차산업혁명</a></p>
 <br><h4 id="CG15">책을 읽어요</h4>
 <p><a href="./pyhtml/GG17.html">2024년 독서 _ 도서관에서 빌린 책 1권 유지</a></p>
-<p><a href="./pyhtml/GG13.html">독서_심리학</a></p>
-<p><a href="./pyhtml/GG14.html">독서_시</a></p>
+<p><a href="./pyhtml/GG13.html#CGBC">nan</a></p>
+<p><a href="./pyhtml/GG13.html#CGBB">nan</a></p>
 <p><a href="./pyhtml/GG26.html">독서_그림</a></p>
 <p><a href="./pyhtml/GG16.html">삶과 죽음</a></p>
 <p><a href="./pyhtml/GG18.html">2023년 독서 _ 5월이후 (13권)</a></p>
