--- a/pyhtml/GG13.html
+++ b/pyhtml/GG13.html
@@ -3,7 +3,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>독서_심리학</title>
+  <title>주제별 독서</title>
 </head>
 <body>
 
@@ -18,6 +18,11 @@
 <p><a href="../book/book_0019.html">019. 가족의 두 얼굴</a></p>
 <p><a href="../book/book_0069.html">069. 나는 왜 네가 힘들까 괜찮아</a></p>
 <p><a href="../book/book_0051.html">051. 행복도 선택이다</a></p>
+<br><h4 id="CGBB">시</h4>
+<p><a href="../book/book_0126.html">126. 중학생 필독 시 (작성중)</a></p>
+<p><a href="../book/book_0122.html">122. 꼭 읽어야 할 시 369 (윤동주)</a></p>
+<p><a href="../book/book_0054.html">054. 백석 _ 외롭고 높고 쓸쓸한</a></p>
+<p><a href="../book/book_0049.html">049. 난 빨강</a></p>
 
 </body>
 </html>
