--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <br><h4 id="CG11">My STUDY</h4>
 <p><a href="./pyhtml/GG30.html">Study</a></p>
 <p><a href="./pyhtml/GG31.html">비전공자를 위한 첫 코딩</a></p>
+<p><a href="./pyhtml/GG34.html">최근 변경</a></p>
 <br><h4 id="CG12">기본 컴퓨터</h4>
 <p><a href="./pyhtml/GG10.html">Office</a></p>
 <br><h4 id="CG13">개발언어 </h4>
@@ -23,9 +24,9 @@
 <p><a href="./pyhtml/GG25.html">4차산업혁명</a></p>
 <br><h4 id="CG15">책을 읽어요</h4>
 <p><a href="./pyhtml/GG17.html">2024년 독서 _ 도서관에서 빌린 책 1권 유지</a></p>
-<p><a href="./pyhtml/GG13.html#CGBC">nan</a></p>
-<p><a href="./pyhtml/GG13.html#CGBB">nan</a></p>
-<p><a href="./pyhtml/GG26.html">독서_그림</a></p>
+<p><a href="./pyhtml/GG13.html#CGBC">독서 _ 심리학</a></p>
+<p><a href="./pyhtml/GG13.html#CGBB">독서 _ 시</a></p>
+<p><a href="./pyhtml/GG13.html#CGBA">독서 _ 미술</a></p>
 <p><a href="./pyhtml/GG16.html">삶과 죽음</a></p>
 <p><a href="./pyhtml/GG18.html">2023년 독서 _ 5월이후 (13권)</a></p>
 <p><a href="./pyhtml/GG19.html">독서</a></p>
