--- a/pyhtml/GG34.html
+++ b/pyhtml/GG34.html
@@ -7,7 +7,10 @@
 </head>
 <body>
 
-  <p><a href="./GG13.html">주제별 독서</a></p>
+  <p><a href="./GG13.html">주제별 독서 (24.11.08)</a></p>
+<p><a href="../conhtml/CC202410271.html">경제) 2025년 투자전망 특강 (홍춘옥)</a></p>
+<p><a href="../conhtml/CC202411081.html">AI) 상위 3%의 AI활용법을 보셔야 합니다 (조용민 언바운드랩데브 투자총괄 대표)</a></p>
+<p><a href="../conhtml/CC202411091.html">경제) 트럼프 이후 (빈센트 _ 문홍철/윤여삼)</a></p>
 
 </body>
 </html>
