--- a/pyhtml/GG17.html
+++ b/pyhtml/GG17.html
@@ -18,6 +18,7 @@
 <p><a href="../book/book_0131.html">131. 격차사회</a></p>
 <p><a href="../book/book_0130.html">130. 미술관에 간 심리학</a></p>
 <p><a href="../book/book_0129.html">129. AI시대의 고등교육</a></p>
+<p><a href="../book/CC202411101.html">독서 : 저속노화 식사법(정희원)</a></p>
 
 </body>
 </html>
