--- a/pyhtml/GG19.html
+++ b/pyhtml/GG19.html
@@ -18,6 +18,7 @@
 <p><a href="../book/book_0131.html">131. 격차사회</a></p>
 <p><a href="../book/book_0130.html">130. 미술관에 간 심리학</a></p>
 <p><a href="../book/book_0129.html">129. AI시대의 고등교육</a></p>
+<p><a href="../book/CC202411101.html">독서 : 저속노화 식사법(정희원)</a></p>
 <br><h4 id="CGB3">2023년 5월이후 독서</h4>
 <p><a href="../book/book_0128.html">128. 10대를 위한 공정하다는 착각</a></p>
 <p><a href="../book/book_0127.html">127. 화가가 사랑한 나무들</a></p>
