--- a/pyhtml/GG31.html
+++ b/pyhtml/GG31.html
@@ -3,7 +3,9 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- 뷰포트 설정 추가 -->
   <title>비전공자를 위한 첫 코딩</title>
+  <link rel="stylesheet" href="../styles.css"> <!-- 외부 CSS 파일 연결 -->
 </head>
 <body>
 
