--- a/book/CC202411101.html
+++ b/book/CC202411101.html
@@ -84,14 +84,14 @@ body {
   h6 { font-size: 1rem !important; }
   
   /* 모바일 화면에서 일괄적인 확대 적용 */
-  @media (max-width: 600px) {
-    body {
-      font-size: 1.1rem !important; /* 본문 글자 크기 약간 증가 */
-    }
-    h1, h2, h3, h4, h5, h6 {
-      font-size: calc(1em + 0.5rem) !important; /* 모든 제목 글자 크기를 약간 증가 */
-    }
-  }
+  /* @media (max-width: 600px) {                                                       
+  /*   body {
+  /*     font-size: 1.1rem !important; /* 본문 글자 크기 약간 증가 */
+  /*   }
+  /*   h1, h2, h3, h4, h5, h6 {
+  /*     font-size: calc(1em + 0.5rem) !important; /* 모든 제목 글자 크기를 약간 증가 */
+  /*   } 
+  /*} */
 </style>
     </head>
     <body class="vscode-body vscode-light">
