--- a/pyhtml/GG30.html
+++ b/pyhtml/GG30.html
@@ -12,6 +12,7 @@
   <p><a href="../study/study_0051.html">Study0051. DB</a></p>
 <p><a href="../study/study_0052.html">Study0052. VSC</a></p>
 <p><a href="https://openai.com/blog/chatgpt/">챗GPT</a></p>
+<p><a href="https://brunch.co.kr/@olmida/3">브런치스토리 : 방화벽</a></p>
 <p><a href="../MY_PGMB/pyhtml/index.html">MY PGM BLOG 2</a></p>
 <p><a href="../MY_PGMB/pyhtml/my2_schedule_output.html">MY Schedule</a></p>
 <p><a href="../MY_PGMB/pyhtml/my2_schedule_output2.html">MY Test Schedule</a></p>
