--- a/pyhtml/GG34.html
+++ b/pyhtml/GG34.html
@@ -14,6 +14,7 @@
 <p><a href="../conhtml/CC202411081.html">AI) 상위 3%의 AI활용법을 보셔야 합니다 (조용민 언바운드랩데브 투자총괄 대표)</a></p>
 <p><a href="../conhtml/CC202411091.html">경제) 트럼프 이후 (빈센트 _ 문홍철/윤여삼)</a></p>
 <p><a href="../book/CC202411101.html">독서 : 저속노화 식사법(정희원)</a></p>
+<p><a href="../conhtml/CC202411171.html">MY To-Do List</a></p>
 
 </body>
 </html>
