--- a/pyhtml/GG34.html
+++ b/pyhtml/GG34.html
@@ -15,6 +15,7 @@
 <p><a href="../conhtml/CC202411091.html">경제) 트럼프 이후 (빈센트 _ 문홍철/윤여삼)</a></p>
 <p><a href="../book/CC202411101.html">독서 : 저속노화 식사법(정희원)</a></p>
 <p><a href="../conhtml/CC202411171.html">MY To-Do List</a></p>
+<p><a href="https://learning.seongnam.go.kr/index.do">성남 배움숲</a></p>
 
 </body>
 </html>
