--- a/pyhtml/GG10.html
+++ b/pyhtml/GG10.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-  <p><a href="../office/office_0001.html">엑셀 셀</a></p>
-<p><a href="../office/office_0008.html">엑셀 수식</a></p>
+  <p><a href="../office/office_0001.html">엑셀 셀 (24.12.01)</a></p>
+<p><a href="../office/office_0008.html">엑셀 수식 (24.12.01)</a></p>
 <p><a href="../office/office_0002.html">HWP</a></p>
 <p><a href="../office/office_0003.html">3벌식</a></p>
 <p><a href="../office/office_0004.html">파워포인트</a></p>
