--- a/conhtml/CC202412011.html
+++ b/conhtml/CC202412011.html
@@ -118,7 +118,27 @@ body {
 </ul>
 </li>
 <li>
-<p>기능의</p>
+<p>기능의학</p>
+<ul>
+<li>마그네슘 (50% 부족)
+<ul>
+<li>다시마, 견과류, 시금치</li>
+</ul>
+</li>
+<li>코엔자임큐텐 : 고지혈증 약 투약시</li>
+<li>비타민 : 생명을 유지시키는 아민
+<ul>
+<li>옛날 항해중 과일 없이 가다가 괴혈증으로 쓰러지기 시작함</li>
+<li>오렌지를 먹고서 살아나다</li>
+</ul>
+</li>
+<li>비타민 D
+<ul>
+<li>우리나라 사람들은 100% 부족</li>
+<li>햇빛 통해서, 음식으로는 안된다. 단 하나 추천한다면 비타민D</li>
+</ul>
+</li>
+</ul>
 </li>
 </ul>
 
