--- a/pyhtml/GG34.html
+++ b/pyhtml/GG34.html
@@ -11,7 +11,7 @@
 
   <p><a href="./GG13.html">주제별 독서 (24.11.08)</a></p>
 <p><a href="../conhtml/CC202410271.html">경제) 2025년 투자전망 특강 (홍춘옥)</a></p>
-<p><a href="../contents/A202411021.pdf">트랜드코리아 2025 : SNAKE SENSE'</a></p>
+<p><a href="../contents/A202411021.pdf">트랜드코리아 2025 : SNAKE SENSE (한다혜)</a></p>
 <p><a href="../conhtml/CC202411081.html">AI) 상위 3%의 AI활용법을 보셔야 합니다 (조용민 언바운드랩데브 투자총괄 대표)</a></p>
 <p><a href="../conhtml/CC202411091.html">경제) 트럼프 이후 (빈센트 _ 문홍철/윤여삼)</a></p>
 <p><a href="../book/CC202411101.html">독서 : 저속노화 식사법(정희원)</a></p>
@@ -20,6 +20,7 @@
 <p><a href="../office/office_0001.html">엑셀 셀 (24.12.01)</a></p>
 <p><a href="../office/office_0008.html">엑셀 수식 (24.12.01)</a></p>
 <p><a href="../conhtml/CC202412011.html">건강 강의 (이동환 유튜버, 교육하는 의사) (작성중)</a></p>
+<p><a href="../contents/A202412021.pdf">우리 뇌의 퍼펙트 게스 (이인아)'</a></p>
 
 </body>
 </html>
