--- a/pyhtml/GG34.html
+++ b/pyhtml/GG34.html
@@ -21,6 +21,7 @@
 <p><a href="../office/office_0008.html">엑셀 수식 (24.12.01)</a></p>
 <p><a href="../conhtml/CC202412011.html">건강 강의 (이동환 유튜버, 교육하는 의사) (작성중)</a></p>
 <p><a href="../contents/A202412021.pdf">우리 뇌의 퍼펙트 게스 (이인아)'</a></p>
+<p><a href="../book/CC202412291.html">독서 : 왜 공부하는가(김진애)</a></p>
 
 </body>
 </html>
