--- a/book/CC202412291.html
+++ b/book/CC202412291.html
@@ -274,6 +274,37 @@
 </ul>
 </li>
 </ul>
+<br>
+<h3 id="6-공부진화론-당신의-야무진-꿈은-무엇인가">6. 공부진화론 (당신의 야무진 꿈은 무엇인가)</h3>
+<ul>
+<li>공부는 항상 모자라다고 느끼게 만든다. 사람의 심리란 약간 모자라다고 느낄 때 지루하지 않고 무언가 더 하고 싶게 만든다</li>
+<li>김진애의 6가지 야무진 꿈
+<ul>
+<li>우리 모두가 어릴 적부터 공간 공부할 때까지</li>
+<li>국민 모두가 자기 집을 그려볼 때까지</li>
+<li>건축의 원죄를 씻을 때까지</li>
+<li>ㅂ자 돌림병이 사라질 때까지</li>
+<li>모든 사람들이 말하는 건축가가 될 때까지
+<strong>- 우리 사회가 건강한 공부생태계가 될 때까지</strong></li>
+</ul>
+</li>
+<li>실질문맹은 우리나라가 미국보다 높다 : 미국에선 어렸을 때부터 항상 토론. 합리적인 의문을 하는 습관이 있고 그래서 일반사람들도 상식 수준이 높음</li>
+<li>김진애의 공부생태계에 대한 바람들
+<ul>
+<li>여러 분야 사람들이 같이 공부하는 연구하는 환경</li>
+<li>여러 세대들이 함께 어울려 공부하는 환경</li>
+<li>가능하면 워크샵이나 스튜디오처럼 무언가 창조해내는 작업 추가</li>
+<li>되도록 공동 프로젝트를 다루는 팀작업이 어느 한 과정이었으면</li>
+<li>토론으로 전개되는 시간이 꼭 필요</li>
+<li>중간 과정에 되도록 현장에 가봐야 한다</li>
+<li>학생들 스스로 자신의 공부 단계를 모니터할 수 있어야 한다</li>
+<li>공부하기와 가르치기의 위치를 넘나드는 것이 필요</li>
+</ul>
+</li>
+<li>한 사람을 변화시키면 그 과정에서 여러 사람들에게 영향을 미치게 되고, 그 사람들 하나하나가 또 새로운 변화의 메신저가 되고, 새로운 에너지를 갖춘 액터가 되는 것이다</li>
+<li>나의 공부 인생에서 얻은 행운 중 하나는 지속가능한 멘토를 찾았다는 사실이다 (박경리의 토지, 한나 아렌트의 인간의 조건)</li>
+<li>활동적 삶이라는 용어 : 세 가지 근본적활동 (노동, 작업, 행위)</li>
+</ul>
 
             
             
