--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
 
   <br><h4 id="CG11">My STUDY</h4>
+<p><a href="./pyhtml/GG35.html">MY</a></p>
+<p><a href="./pyhtml/GG34.html">최근 변경</a></p>
 <p><a href="./pyhtml/GG30.html">Study</a></p>
 <p><a href="./pyhtml/GG31.html">비전공자를 위한 첫 코딩</a></p>
-<p><a href="./pyhtml/GG34.html">최근 변경</a></p>
 <br><h4 id="CG12">기본 컴퓨터</h4>
 <p><a href="./pyhtml/GG10.html">Office</a></p>
 <br><h4 id="CG13">개발언어 </h4>
