--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <p><a href="./pyhtml/GG24.html">빅데이터_R</a></p>
 <p><a href="./pyhtml/GG25.html">4차산업혁명</a></p>
 <br><h4 id="CG15">책을 읽어요</h4>
-<p><a href="./pyhtml/GG17.html">2024년 독서 _ 도서관에서 빌린 책 1권 유지</a></p>
+<p><a href="./pyhtml/GG17.html">2024년 독서</a></p>
 <p><a href="./pyhtml/GG13.html#CGBC">독서 _ 심리학</a></p>
 <p><a href="./pyhtml/GG13.html#CGBB">독서 _ 시</a></p>
 <p><a href="./pyhtml/GG13.html#CGBA">독서 _ 미술</a></p>
