--- a/book/CC202502071.html
+++ b/book/CC202502071.html
@@ -167,8 +167,28 @@
 <li>말에 허물이 적고 행동에 후회가 적으면 출세는 자연히 이뤄진다</li>
 <li>말의 깊이와 무게는 인위적인 꾸밈이 아니라 내면의 충실함에서 자연스럽게 드러나는 것이다</li>
 <li>뛰어난 제자들을 제치고 증자가 유교의 정통성을 이을 수 있었던 이유? : 학문의 초기에는 부족했을지언정 끊임없이 자신을 반성하고, 지치지 않고 스승의 가르침을 익히고 따랐다 : 학문과 수양은 타고난 자질이나 영민함이 아니라 더디지만 꾸준한 하루하루의 노력으로 완성되는 것이다</li>
-<li>다산은 매일같이 하루를 마치고 나면 고요하게 앉아 자신의 하루를 돌아보는 신독의 시간을 가졌다</li>
+<li>다산은 매일같이 하루를 마치고 나면 고요하게 앉아 자신의 하루를 돌아보는 &quot;신독&quot;의 시간을 가졌다</li>
 <li>가난이라는 상황에 매몰되지 않았기에 즐거울 수 있고, 부자라는 상황에 젖어 들지 않았기에 예를 지켜 다른 사람을 배려하기를 좋아하는 것이다</li>
+<li>&quot;인&quot;으로 다스려지는 세상을 만들기 위해 학문으로, 관직으로 끊임없이 노력했다</li>
+<li>곤궁에는 운명이 있음을 알고, 형통에는 때가 있음을 알고, 큰 어려움에 처해도 두려워하지 않는 것이 성인의 용기다</li>
+<li>부모를 생각하지 않는 효는 자기만족이다 (공경하는 마음 필요)</li>
+<li>&quot;온고이지신 가이위사의&quot; : 옛것을 익혀 새것을 알게 되니 스승은 할 만하다 (스승이 될 수 있다. vs 스승이라는 직업의 이점) : <strong>가르침을 통해 제자와 함께 스승도 성장한다</strong></li>
+<li>글을 읽다가 새로운 것을 안다는 것은 단순히 그 글을 익히는 것을 넘어서야 한다. 생각하면서 글을 읽어야 창의적인 생각을 할 수 있고, 새로운 것을 얻게 된다</li>
+<li>초서독서법 : 중요한 것을 뽑아 글로 쓰면서 공부하는 방식 : 빠른 독서 불가능, 스스로 생각하게 함</li>
+<li>스승으로부터의 배움 뿐아니라 동문수학하는 친구나 책을 통해서 배우는 것을 게을리 해서는 안된다</li>
+<li>공부는 먼저 사람됨의 공부다. 그다음 바른 뜻을 가지고 반드시 세상에 뜻을 펼쳐야 한다</li>
+<li>우리가 저지르는 실수의 상당수는 완전히 모르는 것이나 완전히 아는 것이 아니라 '안다고 생각하는 것'에서 발생한다</li>
+<li>질문은 자신에 대한 믿음과 타인에 대한 존중에서 나온다</li>
+<li>부와 명예를 멀리하라는 경고가 아니라, 올바른 도리에 어긋나는 부와 명예를 누려서는 안 된다는 가르침이다</li>
+<li>(다산) 빈천은 그 도에 맢게 벗어나야 하는데, 올바른 도리에 맞게 행했는데도 벗어나지 못했다면 부득이 버리지 않을 뿐이다</li>
+<li>내 마음이 굳게 서는 수양의 단계(충,忠)에 이르렀다면, 다른 사람을 배려하는 근본적인 마음의 자세(서,恕)를 이미 지나고 있다는 것이다</li>
+<li>(영무자) 나라가 무사할 때는 자취를 감추고 권력을 사양하며, 나라에 어려움이 있을 때에는 자기 몸을 잊고 나라에 목숨 바치기를 바란 것이다</li>
+<li>진정한 공부란 분노를 옮기지 않는 것(불천노), 즉 감정을 다스리는 것이다. 그다음은 허물을 고치는 데 망설이지 않는 것(불이과)으로 절제와 성철이다</li>
+<li>빈궁 속에서도 즐거울 수 있는 &quot;안빈낙도&quot;가 진정한 &quot;불천노&quot;의 경지</li>
+<li>아이가 시행착오를 겪을 기회를 빼앗지 마라</li>
+<li>아는 것은 좋아하는 것만 못하고, 좋아하는 것은 즐기는 것만 못하다</li>
+<li>베푸는 것이 넓으면 그 혜택이 미치는 것이 박하기 쉬우므로 많은 대중을 구제할 수 없으니, 넓으면서도 깊게 베풀기란 쉬운 일이 아니다</li>
+<li>모든 사람을 폭넓게 알고 사랑하는 것은 한계가 있게에 근본이 되는 일, 가까운 일부터 서둘러서 해야 한다</li>
 </ul>
 
             
