--- a/pyhtml/GG32.html
+++ b/pyhtml/GG32.html
@@ -14,7 +14,7 @@
 <p><a href="../docu/docu_0001.html">Doc0001. 다이어트 혁명 (EBS 다큐프라임)</a></p>
 <p><a href="../docu/docu_0007.html">Doc0007. 100세 쇼크 (EBS 다큐프라임) (17.08.31)</a></p>
 <p><a href="../news/news_0003.html">News0003. 코털</a></p>
-<p><a href="../conhtml/CC202412011.html">건강 강의 (이동환 유튜버, 교육하는 의사) (작성중)</a></p>
+<p><a href="../conhtml/CC202412011.html">건강 강의 (이동환 유튜버, 교육하는 의사) (2024.12.01)</a></p>
 
 </body>
 </html>
