--- a/pyhtml/GG33.html
+++ b/pyhtml/GG33.html
@@ -17,7 +17,7 @@
 <p><a href="../my/my_0130.html">MY0130. 투자</a></p>
 <p><a href="../my/my_9997.html">MY9997. 투자원칙</a></p>
 <p><a href="../my/my_9999.html">MY9999. 무작정 경제 정리</a></p>
-<p><a href="../conhtml/CC202410271.html">경제) 2025년 투자전망 특강 (홍춘옥)</a></p>
+<p><a href="../conhtml/CC202410271.html">경제) 2025년 투자전망 특강 (홍춘옥) (2024.10.27)</a></p>
 
 </body>
 </html>
