--- a/pyhtml/GG36.html
+++ b/pyhtml/GG36.html
@@ -10,7 +10,7 @@
 <body>
 
   <br><h4 id="CGB5">2025년 독서</h4>
-<p><a href="../book/CC202502071.html">독서 : 다산의 마지막 질문(조윤제)</a></p>
+<p><a href="../book/CC202502071.html">독서 : 다산의 마지막 질문(조윤제) (2025.02.07) (1/3 작성중)</a></p>
 
 </body>
 </html>
