--- a/pyhtml/GG17.html
+++ b/pyhtml/GG17.html
@@ -10,8 +10,8 @@
 <body>
 
   <br><h4 id="CGB4">2024년 독서</h4>
-<p><a href="../book/CC202412291.html">독서 : 왜 공부하는가(김진애)</a></p>
-<p><a href="../book/CC202411101.html">독서 : 저속노화 식사법(정희원)</a></p>
+<p><a href="../book/CC202412291.html">독서 : 왜 공부하는가(김진애) (2024.12.29)</a></p>
+<p><a href="../book/CC202411101.html">독서 : 저속노화 식사법(정희원) (2024.11.10)</a></p>
 <p><a href="../book/book_0138.html">138. 한권으로 읽는 나의 문화유산답사기</a></p>
 <p><a href="../book/book_0137.html">137. 아직도 악어와 악어새 이야기를 믿어</a></p>
 <p><a href="../book/book_0136.html">136. 주식투자 ETF로 시작하라 (작성중)</a></p>
