--- a/book/CC202502071.html
+++ b/book/CC202502071.html
@@ -2,7 +2,7 @@
         <html>
         <head>
             <meta charset="UTF-8">
-            <title>&#xb2e4;&#xc0b0;&#xc758; &#xb9c8;&#xc9c0;&#xb9c9; &#x3163;&#xbb38;</title>
+            <title>&#xb2e4;&#xc0b0;&#xc758; &#xb9c8;&#xc9c0;&#xb9c9; &#xc9c8;&#xbb38;</title>
             <style>
 /* From extension vscode.github */
 /*---------------------------------------------------------------------------------------------
@@ -138,7 +138,7 @@
         
         </head>
         <body class="vscode-body vscode-light">
-            <h1 id="다산의-마지막-ㅣ문">다산의 마지막 ㅣ문</h1>
+            <h1 id="다산의-마지막-질문">다산의 마지막 질문</h1>
 <ul>
 <li>초판 1쇄 발행일 2023.08.18[큰글자도서],  지은이:조윤제  펴낸곳:청림출판</li>
 </ul>
