--- a/pyhtml/GG19.html
+++ b/pyhtml/GG19.html
@@ -10,7 +10,7 @@
 <body>
 
   <br><h4 id="CGB5">2025년 독서</h4>
-<p><a href="../book/CC202002230.html">052. 보노보노처럼 살다니 다행이야 (25.02.09 v3, 1/5 update중)</a></p>
+<p><a href="../book/CC202002230.html">052. 보노보노처럼 살다니 다행이야 (25.02.09 v3.XXX)</a></p>
 <p><a href="../book/CC202502071.html">독서 : 다산의 마지막 질문(조윤제) (2025.02.07) (1/3 작성중)</a></p>
 <br><h4 id="CGB4">2024년 독서</h4>
 <p><a href="../book/CC202412291.html">독서 : 왜 공부하는가(김진애) (2024.12.29)</a></p>
@@ -100,7 +100,7 @@
 <p><a href="../book/book_0054.html">054. 백석 _ 외롭고 높고 쓸쓸한</a></p>
 <p><a href="../book/book_0049.html">049. 난 빨강</a></p>
 <p><a href="../book/book_0053.html">053. 엄마는 파업중</a></p>
-<p><a href="../book/CC202002230.html">052. 보노보노처럼 살다니 다행이야 (25.02.09 v3, 1/5 update중)</a></p>
+<p><a href="../book/CC202002230.html">052. 보노보노처럼 살다니 다행이야 (25.02.09 v3.XXX)</a></p>
 <p><a href="../book/book_0051.html">051. 행복도 선택이다</a></p>
 <p><a href="../book/book_0050.html">050. 82년생 김지영</a></p>
 <p><a href="../book/book_0048.html">048. 사람은 누구나 폭탄이다</a></p>
