--- a/pyhtml/GG34.html
+++ b/pyhtml/GG34.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <p><a href="../book/CC202002230.html">052. 보노보노처럼 살다니 다행이야 (25.02.09 v3, 1/5 update중)</a></p>
+  <p><a href="../book/CC202002230.html">052. 보노보노처럼 살다니 다행이야 (25.02.09 v3.XXX)</a></p>
 <p><a href="../book/CC202502071.html">독서 : 다산의 마지막 질문(조윤제) (2025.02.07) (1/3 작성중)</a></p>
 <p><a href="../book/CC202412291.html">독서 : 왜 공부하는가(김진애) (2024.12.29)</a></p>
 <p><a href="../contents/A202412021.pdf">우리 뇌의 퍼펙트 게스 (이인아) (2024.12.02)</a></p>
