--- a/book/CC202502161.html
+++ b/book/CC202502161.html
@@ -229,6 +229,49 @@
 <ul>
 <li>보노보노 35년 동안 46권</li>
 </ul>
+<h4 id="i1-저는-준이치와-함께-집에서-죽기로-했습니다">I.1 저는 준이치와 함께 집에서 죽기로 했습니다</h4>
+<ul>
+<li>서울에서 KT화재가 났던 날, 다양한 사람들의 하루 동안을 책으로 엮으면 좋겠다는 생각이 듭니다</li>
+<li>(동일본대지진) 저는 동료와 이야기를 나누며 천천히 집까지 걸어왔을 유키에게도 공감이 됐고, 집에서 온갖 상상하며 불안에 떨었을 나리타에게도 공감했습니다</li>
+<li>(준이치 고양이) '내가 많이 아프니 내 몸의 변화를 가까이서 보고 확인하라'라는 의도로 제 침대에 찾아온 게 아닐까 싶습니다</li>
+</ul>
+<h4 id="i2-고양이와-다름없이-날마다-먹고-자고-다시-잠드는-평화로운-생활이-가능할까요">I.2 고양이와 다름없이 날마다 먹고 자고, 다시 잠드는 평화로운 생활이 가능할까요</h4>
+<ul>
+<li>우리 집에도 벌써 4대째인 고양이가 함께 살고 있습니다</li>
+<li>(3대째 페네) 페네가 괴로워 보여 / 피를 토하고 있어 / 빨리 집에 와 (딸 혼자서 지킴, 트라우마)</li>
+</ul>
+<h4 id="j1-태어났을-때부터-죽음으로-변제할-때까지-빚을-지고-사는-인생이라니요">J.1 태어났을 때부터 죽음으로 변제할 때까지 빚을 지고 사는 인생이라니요</h4>
+<ul>
+<li>그렇게 긴장하면서 2년 동안 모은 돈을 집주인에게 넘기니 기분이 이상했습니다</li>
+<li>(엄마) 아마겟돈이 오면 대출금을 안 갚아도 된다</li>
+</ul>
+<h4 id="j2-믿는다는-건-아마도-인간에게만-있는-감정-아닐까요">J.2 믿는다는 건 아마도 인간에게만 있는 감정 아닐까요</h4>
+<ul>
+<li>이가라시씨는 자민당과 같은 해에 태어났군요 (1955년)</li>
+<li>그레이버도 말했듯 세상을 바꾸는 열쇠는 젠더에 있다고 생각합니다 / 평화가 지속되면 부권사회는 약화되고, 새로운 사회가 대두될 거예요</li>
+</ul>
+<h4 id="k1-일을-하고-돈을-벌고-모아도-그-돈으로-집을-살-수-없다는-사실">K.1 일을 하고 돈을 벌고 모아도 그 돈으로 집을 살 수 없다는 사실</h4>
+<ul>
+<li>(영화) 노매드랜드, 이동이 자유로운 하우스리스 밴, 유색인?</li>
+<li>10년 정도를 등교할 때마다 울면서 했더니, 고등학교 1학년 때 학교를 그만두도록 허락해주셨어요</li>
+</ul>
+<h4 id="k2-살아갈-수-있을-만큼-돈을-벌면-하고-싶은-일을-하자">K.2 살아갈 수 있을 만큼 돈을 벌면 하고 싶은 일을 하자</h4>
+<ul>
+<li>노매드랜드의 맥도먼드</li>
+<li>제게 어머니란 어릴 때는 '신'이었고, 소년기에는 '엄마', 청년기에는 '아줌마' 같은 존재였으며, 결혼 후에는 '은인'이었다가, 함께 나이 먹어갈 즈음에는 다시 '어머니'로 돌아온 듯한 느낌이에요. 말년에는 아무 말도 없이 가만히 앉아만 있는 '신'처럼 보이기도 했지요</li>
+<li>어머니가 치매에 걸리기 전 어느날 밤, 느닷없이 '너희 아빠가 살아 있을 때가 제일 좋았어'라고 말한 일은 몹시 놀라웠습니다</li>
+</ul>
+<h4 id="l1-저는-제-친구들이-안전한-세상을-바랍니다">L.1 저는 제 친구들이 안전한 세상을 바랍니다</h4>
+<ul>
+<li>(코로나 시기에 생이별을 막기위해) 저와 타케시는 최후의 보루로 남겨두었던 결혼 카드를 꺼냈습니다</li>
+<li>(1주기) 양양이 그의 고향은 아니었지만 삶의 마지막 순간까지 지내던 곳이라서 그를 떠올리면 양양 바다의 추억이 떠오릅니다</li>
+<li>조금 더 가난하고, 조금 더 불편하고, 많이 혼란스럽더라도 저는 무조건 제 친구들이 안전한 세상을 바랍니다</li>
+</ul>
+<h4 id="l2-고날-속에서-살아가는-이들이야말로-귀한-사람들이라고-생각합니다">L.2 고날 속에서 살아가는 이들이야말로 귀한 사람들이라고 생각합니다</h4>
+<ul>
+<li>이름을 마음대로 부르면서부터 푹 빠지기 시작했어</li>
+<li>박찬욱 감독의 영화 복수는 나의 것을 보다가 스크린 속에 느닷없이 보노보노의 TV만화가 등장해 영문도 모른 채 경악했던 기억이 납니다</li>
+</ul>
 
             
             
