MY11 BLOG 완성 250309H

--- a/index.html
+++ b/index.html
@@ -27,9 +27,6 @@
 <p><a href="./pyhtml/GG25.html">4차산업혁명</a></p>
 <br><h4 id="CG15">책을 읽어요</h4>
 <p><a href="./pyhtml/GG17.html">2024년 독서</a></p>
-<p><a href="./pyhtml/GG13.html#CGBC">독서 _ 심리학</a></p>
-<p><a href="./pyhtml/GG13.html#CGBB">독서 _ 시</a></p>
-<p><a href="./pyhtml/GG13.html#CGBA">독서 _ 미술</a></p>
 <p><a href="./pyhtml/GG16.html">삶과 죽음</a></p>
 <p><a href="./pyhtml/GG18.html">2023년 독서 _ 5월이후 (13권)</a></p>
 <p><a href="./pyhtml/GG19.html">독서</a></p>
@@ -42,6 +39,7 @@
 <p><a href="./pyhtml/GG29.html">영화</a></p>
 <p><a href="./pyhtml/GG32.html">건강</a></p>
 <p><a href="./pyhtml/GG33.html">경제</a></p>
+<p><a href="./office/office_0001.html">엑셀 셀 (24.12.01)</a></p>
 
 </body>
 </html>
