BLOG 일부 오타 수정 250313L

--- a/book/CC202502071.html
+++ b/book/CC202502071.html
@@ -180,8 +180,8 @@
 <li>우리가 저지르는 실수의 상당수는 완전히 모르는 것이나 완전히 아는 것이 아니라 '안다고 생각하는 것'에서 발생한다</li>
 <li>질문은 자신에 대한 믿음과 타인에 대한 존중에서 나온다</li>
 <li>부와 명예를 멀리하라는 경고가 아니라, 올바른 도리에 어긋나는 부와 명예를 누려서는 안 된다는 가르침이다</li>
-<li>(다산) 빈천은 그 도에 맢게 벗어나야 하는데, 올바른 도리에 맞게 행했는데도 벗어나지 못했다면 부득이 버리지 않을 뿐이다</li>
-<li>내 마음이 굳게 서는 수양의 단계(충,忠)에 이르렀다면, 다른 사람을 배려하는 근본적인 마음의 자세(서,恕)를 이미 지나고 있다는 것이다</li>
+<li>(다산) 빈천은 그 도에 맞게 벗어나야 하는데, 올바른 도리에 맞게 행했는데도 벗어나지 못했다면 부득이 버리지 않을 뿐이다</li>
+<li>내 마음이 굳게 서는 수양의 단계(충,忠)에 이르렀다면, 다른 사람을 배려하는 근본적인 마음의 자세(서,恕)를 이미 지니고 있다는 것이다</li>
 <li>(영무자) 나라가 무사할 때는 자취를 감추고 권력을 사양하며, 나라에 어려움이 있을 때에는 자기 몸을 잊고 나라에 목숨 바치기를 바란 것이다</li>
 <li>진정한 공부란 분노를 옮기지 않는 것(불천노), 즉 감정을 다스리는 것이다. 그다음은 허물을 고치는 데 망설이지 않는 것(불이과)으로 절제와 성철이다</li>
 <li>빈궁 속에서도 즐거울 수 있는 &quot;안빈낙도&quot;가 진정한 &quot;불천노&quot;의 경지</li>
