--- a/book/CC202502161.html
+++ b/book/CC202502161.html
@@ -150,7 +150,7 @@
 </ul>
 <h4 id="a2-어쩌면-ai를-만드는-건-신이-되고-싶은-것일-테죠">A.2 어쩌면 AI를 만드는 건 신이 되고 싶은 것일 테죠</h4>
 <ul>
-<li>이랑씨는 처음 우리 작업실에 온 날 방긋방긋 웅으며 깡충깡충 뛰어 들어오던 밝고 즐거운 사람이랍니다</li>
+<li>이랑씨는 처음 우리 작업실에 온 날 방긋방긋 웃으며 깡충깡충 뛰어 들어오던 밝고 즐거운 사람이랍니다</li>
 <li>왜 보노보노를 30년 넘게 계속하냐면, 그만둘 수가 없어서예요. 보노보노 그리기를 멈추는 순간, 보노보노와 다른 캐릭터들이 죽게 되니 불쌍해서 그만두질 못하겠더라고요</li>
 </ul>
 <h4 id="b1-자전거만-타면-노래를-부르는-ai">B.1 자전거만 타면 노래를 부르는 AI</h4>
@@ -168,7 +168,7 @@
 <ul>
 <li>청소년들이 갖는 가장 큰 공포 중에 사어버불링을 당하는 것</li>
 <li>2019년 두 여성 아이돌의 잇다른 자살 : 댓글란이 없어진 건 좋은 변화지만 개인 SNS 계정으로 찾아와 댓글을 달거나 메시지를 보내는 사람들은 여전히 존재 (설리 / 구하라)</li>
-<li>한때는 '옿다'고 생각했던 말이 몇 년 뒤 완전히 '틀린' 말이 되기도 하는 변화무쌍한 세상에서 전부 기억할 수 없는 말들이 오랫동안 기록되고 저장되는 것에 대해 생각해보게 됩니다.</li>
+<li>한때는 '옳다'고 생각했던 말이 몇 년 뒤 완전히 '틀린' 말이 되기도 하는 변화무쌍한 세상에서 전부 기억할 수 없는 말들이 오랫동안 기록되고 저장되는 것에 대해 생각해보게 됩니다.</li>
 </ul>
 <h4 id="c2-우리-인간은-올바른-언어를-구사하지-못합니다">C.2 우리 인간은 올바른 언어를 구사하지 못합니다</h4>
 <ul>
@@ -180,7 +180,7 @@
 <h4 id="d1-신이라면-지옥을-만들-리-없지요">D.1 신이라면 지옥을 만들 리 없지요</h4>
 <ul>
 <li>2019년 3월, 그가 투병을 시작할 뒤 저는 곧바로 주변 친구들과 함께 팀을 꾸려 그의 치료비를 지원하기 위한 프로젝트</li>
-<li>저는 지옥을 믿지 않습니다. 편협하고 잔혹하기 그지없는 지옥을 만들 리 없다는 게 논려였습니다.</li>
+<li>저는 지옥을 믿지 않습니다. 편협하고 잔혹하기 그지없는 지옥을 만들 리 없다는 게 논리였습니다.</li>
 <li>아들이 성소수자임을 숨기고 싶어 했던 목사 집안에서 치른 장례식은 평범한 크리스천 스타일이었습니다. / 찾아온 사람들이 입고 온 티셔츠에는 ... 날뛰고 있었습니다.</li>
 <li>그들의 이야기를 들으며 어쩌면 그는 그가 믿었던 신보다 더 많은 사람들과 내밀한 관계를 맺고 있었다는 생각이 들었습니다</li>
 </ul>
