--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 
   <br><h4 id="CG11">My STUDY</h4>
+<p><a href="./conhtml/CC202411171.html">MY To-Do List (2024.11.17)</a></p>
 <p><a href="./pyhtml/GG35.html">MY</a></p>
 <p><a href="./pyhtml/GG34.html">최근 변경</a></p>
 <p><a href="./pyhtml/GG30.html">Study</a></p>
