--- a/index.html
+++ b/index.html
@@ -27,14 +27,11 @@
 <p><a href="./pyhtml/GG24.html">빅데이터_R</a></p>
 <p><a href="./pyhtml/GG25.html">4차산업혁명</a></p>
 <br><h4 id="CG15">책을 읽어요</h4>
-<p><a href="./pyhtml/GG36.html">2025년 독서 _ 도서관에서 빌린 책 1권 유지</a></p>
-<p><a href="./pyhtml/GG17.html">2024년 독서</a></p>
-<p><a href="./pyhtml/GG13.html#CGBC">독서 _ 심리학</a></p>
-<p><a href="./pyhtml/GG13.html#CGBB">독서 _ 시</a></p>
-<p><a href="./pyhtml/GG13.html#CGBA">독서 _ 미술</a></p>
-<p><a href="./pyhtml/GG16.html">삶과 죽음</a></p>
-<p><a href="./pyhtml/GG18.html">2023년 독서 _ 5월이후 (13권)</a></p>
-<p><a href="./pyhtml/GG19.html">독서</a></p>
+<p><a href="./pyhtml/GG19.html#CGB5">독서 - 2025년 독서</a></p>
+<p><a href="./pyhtml/GG19.html#CGB4">독서 - 2024년 독서</a></p>
+<p><a href="./pyhtml/GG19.html#CGB3">독서 - 2023년 5월이후 독서</a></p>
+<p><a href="./pyhtml/GG19.html#CGB2">독서 - 기존독서 (2023년 5월이전)</a></p>
+<p><a href="./pyhtml/GG13.html#253">주제별 독서 (24.11.08) - None</a></p>
 <br><h4 id="CG16">자격증</h4>
 <p><a href="./pyhtml/GG20.html">DASP</a></p>
 <p><a href="./pyhtml/GG21.html">SW자산관리사(C-SAM)</a></p>
