BLOG 250320L 버그대량생성

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 <p><a href="./pyhtml/GG15.html">빅데이터_기초</a></p>
 <p><a href="./pyhtml/GG24.html">빅데이터_R</a></p>
 <p><a href="./pyhtml/GG25.html">4차산업혁명</a></p>
-<br><h4 id="CG15">책을 읽어요</h4>
-<p><a href="./pyhtml/GG19.html#CGB5">독서 - 2025년 독서</a></p>
-<p><a href="./pyhtml/GG19.html#CGB4">독서 - 2024년 독서</a></p>
-<p><a href="./pyhtml/GG19.html#CGB3">독서 - 2023년 5월이후 독서</a></p>
-<p><a href="./pyhtml/GG19.html#CGB2">독서 - 기존독서 (2023년 5월이전)</a></p>
-<p><a href="./pyhtml/GG13.html#253">주제별 독서 (24.11.08) - None</a></p>
+<br><h4 id="GG37">책을 읽어요</h4>
+<p><a href="./pyhtml/GG19.html#GGB5">독서 - 2025년 독서</a></p>
+<p><a href="./pyhtml/GG19.html#GGB4">독서 - 2024년 독서</a></p>
+<p><a href="./pyhtml/GG19.html#GGB3">독서 - 2023년 5월이후 독서</a></p>
+<p><a href="./pyhtml/GG19.html#GGB2">독서 - 기존독서 (2023년 5월이전)</a></p>
+<p><a href="./pyhtml/GG13.html">주제별 독서 (24.11.08)</a></p>
 <br><h4 id="CG16">자격증</h4>
 <p><a href="./pyhtml/GG20.html">DASP</a></p>
 <p><a href="./pyhtml/GG21.html">SW자산관리사(C-SAM)</a></p>
