--- a/pyhtml/GG13.html
+++ b/pyhtml/GG13.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <br><h4 id="CGBC">독서 _ 심리학</h4>
+  <br><h4 id="GGSC">독서 _ 심리학</h4>
 <p><a href="../book/book_0118.html">118. 무조건 당신편</a></p>
 <p><a href="../book/book_0113.html">113. 마음 실험실</a></p>
 <p><a href="../book/book_0108.html">108. 서른살이 심리학에게 묻다</a></p>
@@ -20,17 +20,23 @@
 <p><a href="../book/book_0019.html">019. 가족의 두 얼굴</a></p>
 <p><a href="../book/book_0069.html">069. 나는 왜 네가 힘들까 괜찮아</a></p>
 <p><a href="../book/book_0051.html">051. 행복도 선택이다</a></p>
-<br><h4 id="CGBB">독서 _ 시</h4>
+<br><h4 id="GGSB">독서 _ 시</h4>
 <p><a href="../book/book_0126.html">126. 중학생 필독 시 (작성중)</a></p>
 <p><a href="../book/book_0122.html">122. 꼭 읽어야 할 시 369 (윤동주)</a></p>
 <p><a href="../book/book_0054.html">054. 백석 _ 외롭고 높고 쓸쓸한</a></p>
 <p><a href="../book/book_0049.html">049. 난 빨강</a></p>
-<br><h4 id="CGBA">독서 _ 미술</h4>
+<br><h4 id="GGSA">독서 _ 미술</h4>
 <p><a href="../book/book_0133.html">133. 알고 가면 미술관엔 그림이 있다</a></p>
 <p><a href="../book/book_0130.html">130. 미술관에 간 심리학</a></p>
 <p><a href="../book/book_0127.html">127. 화가가 사랑한 나무들</a></p>
 <p><a href="../book/book_0107.html">107. The ART of 소울</a></p>
 <p><a href="../book/book_0090.html">090. 내가 사랑한 책</a></p>
+<br><h4 id="GGSD">독서 _ 삶과죽음</h4>
+<p><a href="../docu/docu_0017.html">삶의 지혜를 죽음에게 묻다 (듣고)</a></p>
+<p><a href="../contents/B0000005.pdf">삶의 지혜를 죽음에게 묻다 (강의)</a></p>
+<p><a href="../book/book_0076.html">076. 타나토노트 2</a></p>
+<p><a href="../book/book_0075.html">075. 타나토노트 1</a></p>
+<p><a href="../book/book_0059.html">059. 아버지는 그렇게 작아져간다</a></p>
 
 </body>
 </html>
