--- a/pyhtml/GGB2.html
+++ b/pyhtml/GGB2.html
@@ -4,43 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- 뷰포트 설정 추가 -->
-  <title>독서</title>
+  <title>기존독서 (2023년 5월이전)</title>
   <link rel="stylesheet" href="../styles.css"> <!-- 외부 CSS 파일 연결 -->
 </head>
 <body>
 
-  <br><h4 id="GGB5">2025년 독서</h4>
-<p><a href="../book/CC202002230.html">052. 보노보노처럼 살다니 다행이야 (25.02.09 v3)</a></p>
-<p><a href="../book/CC202502071.html">독서 : 다산의 마지막 질문(조윤제) (2025.02.07) (1/3 작성중)</a></p>
-<br><h4 id="GGB4">2024년 독서</h4>
-<p><a href="../book/CC202412291.html">독서 : 왜 공부하는가(김진애) (2024.12.29)</a></p>
-<p><a href="../book/CC202411101.html">독서 : 저속노화 식사법(정희원) (2024.11.10)</a></p>
-<p><a href="../book/book_0138.html">138. 한권으로 읽는 나의 문화유산답사기</a></p>
-<p><a href="../book/book_0137.html">137. 아직도 악어와 악어새 이야기를 믿어</a></p>
-<p><a href="../book/book_0136.html">136. 주식투자 ETF로 시작하라 (작성중)</a></p>
-<p><a href="../book/book_0135.html">135. 수학의 힘 (작성중)</a></p>
-<p><a href="../book/book_0134.html">134. 미술관 출입증 (작성중)</a></p>
-<p><a href="../book/book_0133.html">133. 알고 가면 미술관엔 그림이 있다</a></p>
-<p><a href="../book/book_0132.html">132. 더 플로</a></p>
-<p><a href="../book/book_0131.html">131. 격차사회</a></p>
-<p><a href="../book/book_0130.html">130. 미술관에 간 심리학</a></p>
-<p><a href="../book/book_0129.html">129. AI시대의 고등교육</a></p>
-<br><h4 id="GGB3">2023년 5월이후 독서</h4>
-<p><a href="../book/book_0128.html">128. 10대를 위한 공정하다는 착각</a></p>
-<p><a href="../book/book_0127.html">127. 화가가 사랑한 나무들</a></p>
-<p><a href="../book/book_0112.html">112. 피니시 (v4)###</a></p>
-<p><a href="../book/book_0126.html">126. 중학생 필독 시 (작성중)</a></p>
-<p><a href="../book/book_0125.html">125. 현명한 투자자 해제</a></p>
-<p><a href="../book/book_0124.html">124. 주식하는 마음</a></p>
-<p><a href="../book/book_0121.html">121. 거인의 어깨 1 (2nd)</a></p>
-<p><a href="../book/book_0123.html">123. 거인의 어깨 2</a></p>
-<p><a href="../book/book_0122.html">122. 꼭 읽어야 할 시 369 (윤동주)</a></p>
-<p><a href="../book/book_0120.html">120. 세상의 모든 법칙</a></p>
-<p><a href="../book/book_0119.html">119. 너도 작가가 되고 싶니?</a></p>
-<p><a href="../book/book_0118.html">118. 무조건 당신편</a></p>
-<p><a href="../book/book_0117.html">117. 너는 사람들을 도와주며 살고 싶니?</a></p>
-<br><h4 id="GGB2">기존독서 (2023년 5월이전)</h4>
-<p><a href="../book/book_0116.html">116. 그러니까 아무말도 하지마세요 (...)</a></p>
+  <p><a href="../book/book_0116.html">116. 그러니까 아무말도 하지마세요 (...)</a></p>
 <p><a href="../book/book_0115.html">115. 아인슈타인이 들려주는 상대성원리 이야기</a></p>
 <p><a href="../book/book_0114.html">114. 나는 누구 인가</a></p>
 <p><a href="../book/book_0111.html">111. 쫌 이상한 사람들</a></p>
