--- a/pyhtml/GGB3.html
+++ b/pyhtml/GGB3.html
@@ -4,13 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- 뷰포트 설정 추가 -->
-  <title>2023년 독서 _ 5월이후 (13권)</title>
+  <title>2023년 5월이후 독서</title>
   <link rel="stylesheet" href="../styles.css"> <!-- 외부 CSS 파일 연결 -->
 </head>
 <body>
 
-  <br><h4 id="CGB3">2023년 5월이후 독서</h4>
-<p><a href="../book/book_0128.html">128. 10대를 위한 공정하다는 착각</a></p>
+  <p><a href="../book/book_0128.html">128. 10대를 위한 공정하다는 착각</a></p>
 <p><a href="../book/book_0127.html">127. 화가가 사랑한 나무들</a></p>
 <p><a href="../book/book_0112.html">112. 피니시 (v4)###</a></p>
 <p><a href="../book/book_0126.html">126. 중학생 필독 시 (작성중)</a></p>
