--- a/pyhtml/GGB5.html
+++ b/pyhtml/GGB5.html
@@ -4,13 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- 뷰포트 설정 추가 -->
-  <title>2025년 독서 _ 도서관에서 빌린 책 1권 유지</title>
+  <title>2025년 독서</title>
   <link rel="stylesheet" href="../styles.css"> <!-- 외부 CSS 파일 연결 -->
 </head>
 <body>
 
-  <br><h4 id="CGB5">2025년 독서</h4>
-<p><a href="../book/CC202002230.html">052. 보노보노처럼 살다니 다행이야 (25.02.09 v3)</a></p>
+  <p><a href="../book/CC202002230.html">052. 보노보노처럼 살다니 다행이야 (25.02.09 v3)</a></p>
 <p><a href="../book/CC202502071.html">독서 : 다산의 마지막 질문(조윤제) (2025.02.07) (1/3 작성중)</a></p>
 
 </body>
