--- a/pyhtml/GGSA.html
+++ b/pyhtml/GGSA.html
@@ -3,12 +3,13 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>독서_그림</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- 뷰포트 설정 추가 -->
+  <title>독서 _ 미술</title>
+  <link rel="stylesheet" href="../styles.css"> <!-- 외부 CSS 파일 연결 -->
 </head>
 <body>
 
-  <br><h4 id="CGBA">미술</h4>
-<p><a href="../book/book_0133.html">133. 알고 가면 미술관엔 그림이 있다</a></p>
+  <p><a href="../book/book_0133.html">133. 알고 가면 미술관엔 그림이 있다</a></p>
 <p><a href="../book/book_0130.html">130. 미술관에 간 심리학</a></p>
 <p><a href="../book/book_0127.html">127. 화가가 사랑한 나무들</a></p>
 <p><a href="../book/book_0107.html">107. The ART of 소울</a></p>
