--- a/pyhtml/GGSB.html
+++ b/pyhtml/GGSB.html
@@ -3,12 +3,13 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>독서_시</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- 뷰포트 설정 추가 -->
+  <title>독서 _ 시</title>
+  <link rel="stylesheet" href="../styles.css"> <!-- 외부 CSS 파일 연결 -->
 </head>
 <body>
 
-  <br><h4 id="CGBB">시</h4>
-<p><a href="../book/book_0126.html">126. 중학생 필독 시 (작성중)</a></p>
+  <p><a href="../book/book_0126.html">126. 중학생 필독 시 (작성중)</a></p>
 <p><a href="../book/book_0122.html">122. 꼭 읽어야 할 시 369 (윤동주)</a></p>
 <p><a href="../book/book_0054.html">054. 백석 _ 외롭고 높고 쓸쓸한</a></p>
 <p><a href="../book/book_0049.html">049. 난 빨강</a></p>
