--- a/pyhtml/GGSD.html
+++ b/pyhtml/GGSD.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- 뷰포트 설정 추가 -->
-  <title>삶과 죽음</title>
+  <title>독서 _ 삶과죽음</title>
   <link rel="stylesheet" href="../styles.css"> <!-- 외부 CSS 파일 연결 -->
 </head>
 <body>
