--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 <p><a href="./pyhtml/GG22.html">HTML_CSS</a></p>
 <p><a href="./pyhtml/GG23.html">Github</a></p>
 <p><a href="./pyhtml/GG31.html">비전공자를 위한 첫 코딩</a></p>
-<br><h4 id="CG14">빅데이터_AI </h4>
-<p><a href="./pyhtml/GG15.html">빅데이터_기초</a></p>
+<br><h4 id="GG38">빅데이터_AI</h4>
 <p><a href="./pyhtml/GG24.html">빅데이터_R</a></p>
 <p><a href="./pyhtml/GG25.html">4차산업혁명</a></p>
 <br><h4 id="GG37">책을 읽어요</h4>
