--- a/office/office_0007.html
+++ b/office/office_0007.html
@@ -2,7 +2,7 @@
         <html>
         <head>
             <meta charset="UTF-8">
-            <title>&#xb9e5; OS</title>
+            <title>&#xb9e5; OS &lpar;25&period;03&period;21&rpar;</title>
             <style>
 /* From extension vscode.github */
 /*---------------------------------------------------------------------------------------------
@@ -138,7 +138,12 @@
         
         </head>
         <body class="vscode-body vscode-light">
-            <h1 id="맥-os">맥 OS</h1>
+            <h1 id="맥-os-250321">맥 OS (25.03.21)</h1>
+<h2 id="finder에서-사용자-디렉토리-찾기--윈도우의-탐색기처럼">Finder에서 사용자 디렉토리 찾기 : 윈도우의 탐색기처럼</h2>
+<ul>
+<li>Shift + Command + H</li>
+</ul>
+<br>
 <h2 id="ios-18">iOS 18</h2>
 <ul>
 <li>my 단말 : 11</li>
