--- a/pyhtml/GG24.html
+++ b/pyhtml/GG24.html
@@ -9,7 +9,18 @@
 </head>
 <body>
 
-  <br><h4 id="GGBig1">R restart 2019</h4>
+  <br><h4 id="GG15">빅데이터_기초</h4>
+<p><a href="../big/big_0001.html">01. 데이터의 이해</a></p>
+<p><a href="../big/big_0002.html">02. 데이터 분석 기획</a></p>
+<p><a href="../big/big_0003.html">03. 데이터분석개요</a></p>
+<p><a href="../big/big_0004.html">04. 데이터마트</a></p>
+<p><a href="../big/big_0005.html">05. 기초 통계</a></p>
+<p><a href="../big/big_0006.html">06. 가설검정_확률</a></p>
+<p><a href="../big/big_0007.html">07. 통계적 분석방법</a></p>
+<p><a href="../big/big_0008.html">08. 분류분석</a></p>
+<p><a href="../big/big_0009.html">09. 군집 _ 연관분석</a></p>
+<p><a href="../big/big_0010.html">10. 비정형데이터마이닝</a></p>
+<br><h4 id="GGBig1">R restart 2019</h4>
 <p><a href="../study/study_0061.html">R 리스타트</a></p>
 <p><a href="../study/study_0062.html">R 마크다운출력</a></p>
 <p><a href="../study/study_0063.html">일정관리1</a></p>
