--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 <p><a href="./pyhtml/GG35.html">MY</a></p>
 <p><a href="./pyhtml/GG34.html">최근 변경</a></p>
 <p><a href="./pyhtml/GG30.html">Study</a></p>
-<br><h4 id="CG12">기본 컴퓨터</h4>
 <p><a href="./pyhtml/GG10.html">Office</a></p>
 <br><h4 id="CG13">개발언어 </h4>
 <p><a href="./pyhtml/GG27.html">MY python Source</a></p>
@@ -23,15 +22,15 @@
 <p><a href="./pyhtml/GG23.html">Github</a></p>
 <p><a href="./pyhtml/GG31.html">비전공자를 위한 첫 코딩</a></p>
 <br><h4 id="GG38">빅데이터_AI</h4>
-<p><a href="./pyhtml/GG24.html">빅데이터_R</a></p>
-<p><a href="./pyhtml/GG25.html">4차산업혁명</a></p>
+<p><a href="./pyhtml/GG24.html">빅데이터 (Study)</a></p>
+<p><a href="./pyhtml/GG25.html">빅데이터 (세미나 등 느슨한)</a></p>
 <br><h4 id="GG37">책을 읽어요</h4>
 <p><a href="./pyhtml/GG19.html#GGB5">독서 - 2025년 독서</a></p>
 <p><a href="./pyhtml/GG19.html#GGB4">독서 - 2024년 독서</a></p>
 <p><a href="./pyhtml/GG19.html#GGB3">독서 - 2023년 5월이후 독서</a></p>
 <p><a href="./pyhtml/GG19.html#GGB2">독서 - 기존독서 (2023년 5월이전)</a></p>
 <p><a href="./pyhtml/GG13.html">주제별 독서 (24.11.08)</a></p>
-<br><h4 id="CG16">자격증</h4>
+<br><h4 id="GG16">자격증</h4>
 <p><a href="./pyhtml/GG20.html">DASP</a></p>
 <p><a href="./pyhtml/GG21.html">SW자산관리사(C-SAM)</a></p>
 <br><h4 id="CG17">상식</h4>
