--- a/pyhtml/GG16.html
+++ b/pyhtml/GG16.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- 뷰포트 설정 추가 -->
-  <title>빅데이터_AI</title>
+  <title>자격증</title>
   <link rel="stylesheet" href="../styles.css"> <!-- 외부 CSS 파일 연결 -->
 </head>
 <body>
 
-  <p><a href="./GG24.html">빅데이터 (Study)</a></p>
-<p><a href="./GG25.html">빅데이터 (세미나 등 느슨한)</a></p>
+  <p><a href="./GG20.html">DASP</a></p>
+<p><a href="./GG21.html">SW자산관리사(C-SAM)</a></p>
 
 </body>
 </html>
