--- a/pyhtml/GG34.html
+++ b/pyhtml/GG34.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 
-  <p><a href="../conhtml/CC202503091.html">AI 온라인 교육 (25.03)</a></p>
+  <p><a href="../office/office_0007.html">맥OS</a></p>
+<p><a href="../conhtml/CC202503091.html">AI 온라인 교육 (25.03)</a></p>
 <p><a href="../conhtml/CC202503031.html">경제 : 기타등등 잡동사니 (25.03.03) </a></p>
 <p><a href="../book/CC202502161.html">독서 : 모쪼록 잘 부탁드립니다(이랑, 이가라시 미키오) (2025.02.16)</a></p>
 <p><a href="../book/CC202002230.html">052. 보노보노처럼 살다니 다행이야 (25.02.09 v3)</a></p>
