BLOG CG18빠고 250321L3

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 
-  <br><h4 id="CG11">My STUDY</h4>
+  <br><h4 id="GG40">My STUDY</h4>
+<p><a href="./pyhtml/GG34.html">최근 변경</a></p>
 <p><a href="./conhtml/CC202411171.html">MY To-Do List (2024.11.17)</a></p>
 <p><a href="./pyhtml/GG35.html">MY</a></p>
-<p><a href="./pyhtml/GG34.html">최근 변경</a></p>
 <p><a href="./pyhtml/GG30.html">Study</a></p>
 <p><a href="./pyhtml/GG10.html">Office</a></p>
-<br><h4 id="CG13">개발언어 </h4>
+<br><h4 id="GG39">개발언어 </h4>
 <p><a href="./pyhtml/GG27.html">MY python Source</a></p>
 <p><a href="./pyhtml/GG11.html">python</a></p>
 <p><a href="./pyhtml/GG22.html">HTML_CSS</a></p>
@@ -33,7 +33,7 @@
 <br><h4 id="GG16">자격증</h4>
 <p><a href="./pyhtml/GG20.html">DASP</a></p>
 <p><a href="./pyhtml/GG21.html">SW자산관리사(C-SAM)</a></p>
-<br><h4 id="CG17">상식</h4>
+<br><h4 id="GG17">상식</h4>
 <p><a href="./pyhtml/GG12.html">차이나는 클라스</a></p>
 <p><a href="./pyhtml/GG28.html">기타등등</a></p>
 <p><a href="./pyhtml/GG29.html">영화</a></p>
