--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 <p><a href="./pyhtml/GG30.html">Study</a></p>
 <p><a href="./pyhtml/GG10.html">Office</a></p>
 <br><h4 id="GG39">개발언어 </h4>
+<p><a href="./pyhtml/GGBig1.html">R restart 2019</a></p>
+<p><a href="./pyhtml/GGBig2.html">빅데이터 분석도구 R프로그래밍</a></p>
+<p><a href="./pyhtml/GGBig3.html">DoR</a></p>
+<p><a href="./study/study_0051.html">Study0051. DB</a></p>
+<p><a href="./study/study_0052.html">Study0052. VSC</a></p>
 <p><a href="./pyhtml/GG27.html">MY python Source</a></p>
 <p><a href="./pyhtml/GG11.html">python</a></p>
 <p><a href="./pyhtml/GG22.html">HTML_CSS</a></p>
