--- a/pyhtml/GG39.html
+++ b/pyhtml/GG39.html
@@ -9,7 +9,12 @@
 </head>
 <body>
 
-  <p><a href="./GG27.html">MY python Source</a></p>
+  <p><a href="./GGBig1.html">R restart 2019</a></p>
+<p><a href="./GGBig2.html">빅데이터 분석도구 R프로그래밍</a></p>
+<p><a href="./GGBig3.html">DoR</a></p>
+<p><a href="../study/study_0051.html">Study0051. DB</a></p>
+<p><a href="../study/study_0052.html">Study0052. VSC</a></p>
+<p><a href="./GG27.html">MY python Source</a></p>
 <p><a href="./GG11.html">python</a></p>
 <p><a href="./GG22.html">HTML_CSS</a></p>
 <p><a href="./GG23.html">Github</a></p>
