--- a/index.html
+++ b/index.html
@@ -16,16 +16,10 @@
 <p><a href="./pyhtml/GG30.html">Study</a></p>
 <p><a href="./pyhtml/GG10.html">Office</a></p>
 <br><h4 id="GG39">개발언어 </h4>
-<p><a href="./pyhtml/GGBig1.html">R restart 2019</a></p>
-<p><a href="./pyhtml/GGBig2.html">빅데이터 분석도구 R프로그래밍</a></p>
-<p><a href="./pyhtml/GGBig3.html">DoR</a></p>
-<p><a href="./study/study_0051.html">Study0051. DB</a></p>
-<p><a href="./study/study_0052.html">Study0052. VSC</a></p>
-<p><a href="./pyhtml/GG27.html">MY python Source</a></p>
-<p><a href="./pyhtml/GG11.html">python</a></p>
-<p><a href="./pyhtml/GG22.html">HTML_CSS</a></p>
-<p><a href="./pyhtml/GG23.html">Github</a></p>
-<p><a href="./pyhtml/GG31.html">비전공자를 위한 첫 코딩</a></p>
+<p><a href="./pyhtml/GG41.html">0.기본도구</a></p>
+<p><a href="./pyhtml/GG42.html">1.HTML</a></p>
+<p><a href="./pyhtml/GG43.html">2.Python</a></p>
+<p><a href="./pyhtml/GG44.html">3.R</a></p>
 <br><h4 id="GG38">빅데이터_AI</h4>
 <p><a href="./pyhtml/GG24.html">빅데이터 (Study)</a></p>
 <p><a href="./pyhtml/GG25.html">빅데이터 (세미나 등 느슨한)</a></p>
