--- a/pyhtml/GG39.html
+++ b/pyhtml/GG39.html
@@ -9,16 +9,10 @@
 </head>
 <body>
 
-  <p><a href="./GGBig1.html">R restart 2019</a></p>
-<p><a href="./GGBig2.html">빅데이터 분석도구 R프로그래밍</a></p>
-<p><a href="./GGBig3.html">DoR</a></p>
-<p><a href="../study/study_0051.html">Study0051. DB</a></p>
-<p><a href="../study/study_0052.html">Study0052. VSC</a></p>
-<p><a href="./GG27.html">MY python Source</a></p>
-<p><a href="./GG11.html">python</a></p>
-<p><a href="./GG22.html">HTML_CSS</a></p>
-<p><a href="./GG23.html">Github</a></p>
-<p><a href="./GG31.html">비전공자를 위한 첫 코딩</a></p>
+  <p><a href="./GG41.html">0.기본도구</a></p>
+<p><a href="./GG42.html">1.HTML</a></p>
+<p><a href="./GG43.html">2.Python</a></p>
+<p><a href="./GG44.html">3.R</a></p>
 
 </body>
 </html>
